--- a/app/src/main/res/layout/content_dashboard.xml
+++ b/app/src/main/res/layout/content_dashboard.xml
@@ -13,11 +13,13 @@
     tools:showIn="@layout/app_bar_dashboard"
     android:background="#DDDDDD">
 
-    <view
-        android:id="@+id/recycler_view"
-        class="android.support.v7.widget.RecyclerView"
+
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view_dashboard"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_centerInParent="true" />
+
 
 </RelativeLayout>
