--- a/app/src/main/res/layout/content_dashboard.xml
+++ b/app/src/main/res/layout/content_dashboard.xml
@@ -10,12 +10,19 @@
     android:background="#DDDDDD">
 
 
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/swipeRefresh">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_view_dashboard"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_centerInParent="true" />
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycler_view_dashboard"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_centerInParent="true" />
+
+    </android.support.v4.widget.SwipeRefreshLayout>
+
 
 
 </RelativeLayout>
