--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,7 +6,7 @@
     android:paddingTop="60dp"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:focusableInTouchMode="true"
-    tools:context="com.pericstudio.drawit.Login" >
+    tools:context="com.pericstudio.drawit.activities.LoginActivity" >
 
     <android.support.v7.widget.CardView
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
