--- a/app/src/main/res/layout/app_bar_dashboard_no_drawing.xml
+++ b/app/src/main/res/layout/app_bar_dashboard_no_drawing.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.pericstudio.drawit.activities.DashboardActivity">
+    tools:context="com.pericstudio.drawit.activities.DashboardActivityNoDrawing">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -21,8 +22,8 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <!-- TODO: Add Refreshlayout View thingy -->
-    <include layout="@layout/content_dashboard" />
+
+    <include layout="@layout/content_dashboard_no_drawing" />
 
 
 
