The Navigation Drawer will display the user's profile picture.
This will only work if the user decides to login through Facebook.

--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -8,6 +8,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="One second splash"
+        android:textColor="#000"
         android:id="@+id/textView3"
         android:layout_gravity="center_horizontal"
         android:layout_centerVertical="true"
