--- a/app/src/main/res/layout/card_create_account.xml
+++ b/app/src/main/res/layout/card_create_account.xml
@@ -24,10 +24,11 @@
         android:ems="10"
         android:maxLength="12"
         android:id="@+id/etCreateDisplayName"
-        android:layout_below="@+id/etCreateEmail"
-        android:layout_centerHorizontal="true"
         android:hint="Display Name (12 chars max)"
-        android:paddingTop="10dp" />
+        android:paddingTop="10dp"
+        android:layout_below="@+id/etLastName"
+        android:layout_alignLeft="@+id/etLastName"
+        android:layout_alignStart="@+id/etLastName" />
 
     <EditText
         android:layout_width="320dp"
@@ -35,10 +36,11 @@
         android:inputType="textPassword"
         android:ems="10"
         android:id="@+id/etCreatePassword"
-        android:layout_below="@+id/etCreateDisplayName"
-        android:layout_centerHorizontal="true"
         android:hint="Password (5 min chars)"
-        android:paddingTop="10dp"/>
+        android:paddingTop="10dp"
+        android:layout_below="@+id/etCreateDisplayName"
+        android:layout_alignLeft="@+id/etCreateDisplayName"
+        android:layout_alignStart="@+id/etCreateDisplayName" />
 
     <EditText
         android:layout_width="320dp"
@@ -46,11 +48,11 @@
         android:inputType="textPassword"
         android:ems="10"
         android:id="@+id/etCreateConfirmPassword"
-        android:layout_below="@+id/etCreatePassword"
-        android:layout_alignRight="@+id/etCreatePassword"
-        android:layout_alignEnd="@+id/etCreatePassword"
         android:hint="Confirm Password"
-        android:paddingTop="10dp"/>
+        android:paddingTop="10dp"
+        android:layout_below="@+id/etCreatePassword"
+        android:layout_alignLeft="@+id/etCreatePassword"
+        android:layout_alignStart="@+id/etCreatePassword" />
 
     <Button
         android:layout_width="wrap_content"
@@ -66,6 +68,32 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:hint="First Name"
+        android:ems="10"
+        android:id="@+id/etFirstName"
+        android:layout_below="@+id/etCreateEmail"
+        android:layout_alignLeft="@+id/etCreateEmail"
+        android:layout_alignStart="@+id/etCreateEmail"
+        android:layout_alignRight="@+id/etCreateEmail"
+        android:layout_alignEnd="@+id/etCreateEmail" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:hint="Last Name"
+        android:ems="10"
+        android:id="@+id/etLastName"
+        android:layout_below="@+id/etFirstName"
+        android:layout_alignLeft="@+id/etFirstName"
+        android:layout_alignStart="@+id/etFirstName"
+        android:layout_alignRight="@+id/etFirstName"
+        android:layout_alignEnd="@+id/etFirstName" />
 
 
 </RelativeLayout>
