--- a/app/src/main/res/layout/app_bar_dashboard.xml
+++ b/app/src/main/res/layout/app_bar_dashboard.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.pericstudio.drawit.activities.DashboardActivity">
+    tools:context=".activities.DashboardActivityOld">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
