--- a/app/src/main/res/layout/app_bar_dashboard.xml
+++ b/app/src/main/res/layout/app_bar_dashboard.xml
@@ -19,6 +19,11 @@
             android:background="@color/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
+        <android.support.design.widget.TabLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/tabLayout" />
+
     </android.support.design.widget.AppBarLayout>
 
 
