--- a/app/src/main/res/layout/content_dashboard.xml
+++ b/app/src/main/res/layout/content_dashboard.xml
@@ -10,28 +10,10 @@
     android:background="#DDDDDD">
 
 
-    <TextView
+    <android.support.v4.view.ViewPager
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/viewPager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/no_drawings"
-        android:id="@+id/tv_no_drawing"
-        android:gravity="center" />
-
-    <android.support.v4.widget.SwipeRefreshLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/inProgressSwipeRefresh">
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/recycler_view_dashboard"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_centerInParent="true" />
-
-    </android.support.v4.widget.SwipeRefreshLayout>
-
-
-
+        android:layout_height="match_parent" />
 
 </RelativeLayout>
