--- a/app/src/main/res/layout/card_dashboard_item.xml
+++ b/app/src/main/res/layout/card_dashboard_item.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/dashboard_item"
     android:layout_width="match_parent"
-    android:layout_height="80dp"
+    android:layout_height="85dp"
     android:layout_marginTop="5dp"
     android:layout_marginLeft="3dp"
     android:layout_marginRight="3dp">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+    <!--<RelativeLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent">-->
         <TextView
             android:paddingTop="8dp"
             android:paddingLeft="5dp"
@@ -44,6 +45,15 @@
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
             android:onClick="deleteThing"/>
-    </RelativeLayout>
+    <!--</RelativeLayout>-->
 
-</android.support.v7.widget.CardView>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:background="#000000"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
+    </View>
+
+</RelativeLayout>
