Recyclerview children now have an alternating background color.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -25,4 +25,8 @@
     <color name="colorIcons">#FFFFFF</color>
     <color name="colorDivider">#B6B6B6</color>
 
+    <color name="evenLayout">#FFFFFF</color>
+    <color name="oddLayout">#D1F6FC</color>
+
+
 </resources>
