--- a/app/src/main/res/layout/app_bar_dashboard.xml
+++ b/app/src/main/res/layout/app_bar_dashboard.xml
@@ -52,6 +52,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        android:src="@drawable/ic_add_white_24dp" />
+        android:src="@drawable/ic_add_white_24dp"
+        app:layout_anchorGravity="bottom|end"
+        app:layout_behavior="com.pericstudio.drawit.aesthetics.HideFAB"/>
 
 </android.support.design.widget.CoordinatorLayout>
