--- a/app/src/main/res/layout/card_dashboard_item.xml
+++ b/app/src/main/res/layout/card_dashboard_item.xml
@@ -51,15 +51,17 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Test!"
-            android:id="@+id/bt_card_dashboard"
-            android:layout_centerVertical="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            android:onClick="deleteThing"/>
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/bt_card_dashboard"
+        android:layout_centerVertical="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:background="@android:color/transparent"
+        android:src="@drawable/ic_navigate_next_black_24dp"/>
+
+
     <!--</RelativeLayout>-->
 
 </RelativeLayout>
