--- a/app/src/main/res/layout/fragment_test_three.xml
+++ b/app/src/main/res/layout/fragment_test_three.xml
@@ -27,4 +27,11 @@
         android:id="@+id/tv_test_fragment_three"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
+
+    <com.facebook.login.widget.LoginButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/login_button_fb"
+        android:layout_below="@+id/tv_test_fragment_three"
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
