Update of what is done so far.

--- a/app/src/main/res/layout/fragment_test_one.xml
+++ b/app/src/main/res/layout/fragment_test_one.xml
@@ -31,4 +31,13 @@
 
     </android.support.v4.widget.SwipeRefreshLayout>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="There are currently no drawings in progress"
+        android:id="@+id/tv_no_drawing"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
+
 </RelativeLayout>
