Added some a test for FAB that will create a new 'Drawing".
Also fixed a case where SavedInstanceState will somehow double the data for the RecyclerView.'

--- a/app/src/main/res/layout/fragment_test_one.xml
+++ b/app/src/main/res/layout/fragment_test_one.xml
@@ -35,7 +35,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="There are currently no drawings in progress"
+        android:text="No drawings found that are your turn."
+        android:gravity="center"
         android:id="@+id/tv_no_drawing"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
