--- a/app/src/main/res/layout/app_bar_dashboard.xml
+++ b/app/src/main/res/layout/app_bar_dashboard.xml
@@ -21,7 +21,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".activities.DashboardActivityOld">
+    tools:context=".activities.DashboardMainActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -53,7 +53,8 @@
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
         android:src="@drawable/ic_add_white_24dp"
-        app:layout_anchorGravity="bottom|end"
-        app:layout_behavior="com.pericstudio.drawit.aesthetics.HideFAB"/>
+        app:layout_anchorGravity="bottom|end" />
+        <!--app:layout_behavior="com.pericstudio.drawit.aesthetics.HideFAB"/>-->
+
 
 </android.support.design.widget.CoordinatorLayout>
